--- a/python/website/style.css
+++ b/python/website/style.css
@@ -19,6 +19,10 @@ div.section {
 	padding: 1px 20px 10px 20px;
 	margin: 20px 0;
 }
+div.section div.section {
+	padding: 1px 0px 10px 0px;
+}
+
 
 h1 {
 	font-size: 180%;
@@ -38,6 +42,17 @@ div.section h2 {
 	Xcolor: #090;
 	color: #238EC6;
 }
+
+div.section h3 {
+	color: #238EC6;
+}
+	
+div.section h3 tt {
+	font-size: 150%;
+	
+}
+
+
 
 pre {
 	background: #EEE;
