python: add '{{* *}}' to 'README.txt' which are converted into '<strong>' tag in html

--- a/python/website/style.css
+++ b/python/website/style.css
@@ -60,6 +60,12 @@ pre {
 	padding: 5px 10px;
 }
 
+pre strong {
+	font-weight: bold;
+	color: #600;
+}
+
+
 dl.docutils dt {
 	font-weight: bold;
 	border: dotted #090;
